--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
     <img class="pading" src="./Frame 19.png" alt="">
 
 </div>
+<img class="mektub" src="./Group 2380 (1).png" alt="">
     </div>
+    <img class="bilmirem" src="./Frame 23.png" alt="">
+    <img class="bilirem" src="./Frame 28.png" alt="">
 </div>
+
 </body>
 </html>
